--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                  
                 </div>
               </div> 
+              <button class="btn btn-secondary" id="restore" type="button">Restore</button>
               <button class="btn btn-primary" id="print">Print</button> </div>
             
 
