--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <script>
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
-      navigator.serviceWorker.register("./sw.js")
+      navigator.serviceWorker.register("/newcookie/sw.js", { scope: "/newcookie/" })
         .then(() => console.log("Service Worker registered"))
         .catch((err) => console.error("Service Worker registration failed:", err));
     });
